# trading_model

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: SMS_notifier.py  main.py
src/models/: base_model.py  model1.py  random_forest.ipynb  tensorflow_lstm.ipynb  tensorflow_model.py  wed2.py
src/models/model1/: WIPModel1.ipynb  WIPModel2.ipynb  WIPModel3.ipynb
src/models/model1/utils/: s&p_scraper.py
src/models/model3/: WIPModel3.ipynb  colabModel.ipynb  model3.keras  scaler_future_price.pkl  scaler_technical.pkl  scaler_ticker.pkl
src/models/model3/scalers/A/: scaler_close.pkl  scaler_sma_10.pkl  scaler_sma_30.pkl
src/models/model3/scalers/AAPL/: scaler_close.pkl  scaler_sma_10.pkl  scaler_sma_30.pkl
src/models/model3/scalers/ABBV/: scaler_close.pkl  scaler_sma_10.pkl  scaler_sma_30.pkl
src/models/model3/scalers/ABNB/: scaler_close.pkl  scaler_sma_10.pkl  scaler_sma_30.pkl
src/models/model3/scalers/ABT/: scaler_close.pkl  scaler_sma_10.pkl  scaler_sma_30.pkl
src/models/model3/scalers/ACGL/: scaler_close.pkl  scaler_sma_10.pkl  scaler_sma_30.pkl
src/models/model3/scalers/ACN/: scaler_close.pkl  scaler_sma_10.pkl  scaler_sma_30.pkl
src/models/model3/scalers/ADBE/: scaler_close.pkl  scaler_sma_10.pkl  scaler_sma_30.pkl
src/models/model3/scalers/ADI/: scaler_close.pkl  scaler_sma_10.pkl  scaler_sma_30.pkl
src/models/model3/scalers/ADM/: scaler_close.pkl  scaler_sma_10.pkl  scaler_sma_30.pkl
src/models/model3/scalers/ADP/: scaler_close.pkl  scaler_sma_10.pkl  scaler_sma_30.pkl
src/models/model4/: WIPModel4.ipynb  WIPModel4.py  colabModel.ipynb  model4.keras  scaler_future_price.pkl  scaler_technical.pkl  scaler_ticker.pkl
src/models/model4/utils/: backtester.py  create_df.py  main.py
src/models/model5/: TalibIndicators.py  WIPModel5.py  eodhd_test.py
src/models/utils/: add_date_ranges.py  backtester.ipynb  main.ipynb  scaler_future_price.pkl  scaler_technical.pkl  scaler_ticker.pkl  sp_scraper.py
src/pre_processing/: data_transform.py  reformat_stock_splits.py  s3_download.py  split_db.py  technical_indicators.py
(+3488 files in other folders)
