[project]
name = "trading-model"
version = "0.1.0"
description = ""
authors = [
    {name = "Aryan Hazra",email = "ahazra8@gatech.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polygon (>=1.2.6,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "ta-lib (>=0.6.3,<0.7.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
]

[tool.poetry]
packages = [{include = "trading_model", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
