[project]
name = "trading-model"
version = "0.1.0"
description = ""
authors = [
    {name = "Aryan Hazra",email = "ahazra8@gatech.edu"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "polygon (>=1.2.6,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "ta-lib (>=0.6.3,<0.7.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "dask (>=2025.3.0,<2026.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "numpy (>=2.2.4)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pympler (>=1.1,<2.0)",
    "yfinance (>=0.2.55,<0.3.0)",
    "optuna (>=4.2.1,<5.0.0)",
    "pandas-ta (>=0.3.14b0,<0.4.0)"
]

[tool.poetry]
packages = [{include = "trading_model", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
